
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_3__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int count; } ;
struct bearer {size_t priority; TYPE_1__ nodes; int active; } ;
struct bcbearer_pair {struct bearer* secondary; struct bearer* primary; } ;
struct TYPE_5__ {struct bcbearer_pair* bpairs; struct bcbearer_pair* bpairs_temp; } ;


 int MAX_BEARERS ;
 int TIPC_MAX_LINK_PRI ;
 int bc_lock ;
 TYPE_3__* bcbearer ;
 int memset (struct bcbearer_pair*,int ,int) ;
 int spin_lock_bh (int *) ;
 int spin_unlock_bh (int *) ;
 struct bearer* tipc_bearers ;
 scalar_t__ tipc_nmap_equal (TYPE_1__*,TYPE_1__*) ;

void tipc_bcbearer_sort(void)
{
 struct bcbearer_pair *bp_temp = bcbearer->bpairs_temp;
 struct bcbearer_pair *bp_curr;
 int b_index;
 int pri;

 spin_lock_bh(&bc_lock);



 memset(bp_temp, 0, sizeof(bcbearer->bpairs_temp));

 for (b_index = 0; b_index < MAX_BEARERS; b_index++) {
  struct bearer *b = &tipc_bearers[b_index];

  if (!b->active || !b->nodes.count)
   continue;

  if (!bp_temp[b->priority].primary)
   bp_temp[b->priority].primary = b;
  else
   bp_temp[b->priority].secondary = b;
 }



 bp_curr = bcbearer->bpairs;
 memset(bcbearer->bpairs, 0, sizeof(bcbearer->bpairs));

 for (pri = TIPC_MAX_LINK_PRI; pri >= 0; pri--) {

  if (!bp_temp[pri].primary)
   continue;

  bp_curr->primary = bp_temp[pri].primary;

  if (bp_temp[pri].secondary) {
   if (tipc_nmap_equal(&bp_temp[pri].primary->nodes,
         &bp_temp[pri].secondary->nodes)) {
    bp_curr->secondary = bp_temp[pri].secondary;
   } else {
    bp_curr++;
    bp_curr->primary = bp_temp[pri].secondary;
   }
  }

  bp_curr++;
 }

 spin_unlock_bh(&bc_lock);
}
